<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_routes"
            android:icon="@drawable/rutas"
            android:title="@string/nav_routes" />
        <item
            android:id="@+id/nav_places"
            android:icon="@drawable/localizacion_24px"
            android:title="@string/nav_places" />
    </group>

    <item android:title="Nosotros">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/info"
                android:title="@string/nav_about" />
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/nav_contact" />
        </menu>
    </item>

</menu>
